Fix issue with timer jumping across notes by standardizing note keys as uuid

--- a/src/styles/NoteStyle.css
+++ b/src/styles/NoteStyle.css
@@ -43,15 +43,18 @@
   padding: 0px;
   margin: 0px;
   line-height: 1;
-  /* display: "flex";
-  flex-direction: "column";
-  align-items: "center";
-  justify-content: "center"; */
   /* box-sizing: border-box; */
   /* margin-top: 12px;
   margin-right: 6px;
   margin-bottom: 3px;
   margin-left: 12px; */
+}
+
+.left-align {
+  display: "flex" !important;
+  flex-direction: "column" !important;
+  align-items: "left" !important;
+  justify-content: "left" !important;
 }
 
 .note-textarea-wrapper {
